--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -2,6 +2,14 @@
 
 {% block body %}
     <h2>Active Listings</h2>
+    
+    <a class="nav-link" href="{% url 'listing' %}">Create Listing</a>
 
-    TODO
+    <ul>
+        {% for listing in Listings %}
+            <li>{{ listing.title }}
+                <p>{{ listing.description }}</p>
+            </li>
+        {% endfor %}
+    </ul>
 {% endblock %}
