--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -10,14 +10,7 @@
 
     <form action="{% url 'listing' %}" method="post" id="listingform">
         {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="title" placeholder="Title">
-        </div>
-        <div class="form-group">
-            <textarea form="listingform" class="form-control" type="text" name="description" placeholder="Description"></textarea>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="number" name="price" placeholder="Starting Price">
+        {{ form.as_p }}
         </div>
         <input class="btn btn-primary" type="submit" value="Create Listing">
     </form>
