added bids in each listing, and changed current price to be handled as the webpage is loaded.

--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -10,8 +10,9 @@
 
     <form action="{% url 'listing' %}" method="post" id="listingform">
         {% csrf_token %}
-        {{ form.as_p }}
-        </div>
+        <table style="width:100%";>
+            {{ form.as_table }}
+        </table>
         <input class="btn btn-primary" type="submit" value="Create Listing">
     </form>
 
