--- a/commerce/auctions/templates/auctions/listing_view.html
+++ b/commerce/auctions/templates/auctions/listing_view.html
@@ -16,5 +16,24 @@
         <p>Current Price: ${{current_price}}</p>
     </div>
 
+    <ul>
+        {%for bid in bids %}
+            <li>{{ bid }}</li>
+
+        {% endfor %}
+    </ul>
+
+    <div>
+        <h3>Make a Bid</h3>
+        <form action="{% url 'listing_id' listing_id %}" method="POST">
+            {% csrf_token %}
+            {{ form }}
+            <div>
+                <input class="btn btn-primary" type="submit" value="Submit">
+            </div>
+        </form>
+    </div>
+
+
 
 {% endblock %}
