--- a/commerce/auctions/templates/auctions/listing_view.html
+++ b/commerce/auctions/templates/auctions/listing_view.html
@@ -27,11 +27,28 @@
         <h3>Make a Bid</h3>
         <form action="{% url 'listing_id' listing_id %}" method="POST">
             {% csrf_token %}
-            {{ form }}
+            {{ bidform }}
             <div>
-                <input class="btn btn-primary" type="submit" value="Submit">
+                <input class="btn btn-primary" type="submit" value="Submit Bid">
             </div>
         </form>
+        
+
+        <h3>Make a Comment</h3>
+        <form action="{% url 'comment' listing_id %}" method="POST">
+            {% csrf_token %}
+            {{ commentform }}
+            <div>
+                <input class="btn btn-primary" type="submit" value="Submit Comment">
+            </div>
+        </form>
+
+        <ul>
+            {%for comment in comments %}
+                <li>{{ comment }}</li>
+    
+            {% endfor %}
+        </ul>
     </div>
 
 
