message now shows when bidding is closed and if you are the winner.

--- a/commerce/auctions/templates/auctions/listing_view.html
+++ b/commerce/auctions/templates/auctions/listing_view.html
@@ -30,6 +30,12 @@
         {% endfor %}
     </ul>
 
+    {% if listing.is_closed %}
+        <h4>Bidding on this item is now closed.</h4>
+        {% if User == winner %}
+            <h5>You are the winner. Congratulations!</h5>
+        {% endif %}
+    {% endif %}
     <div>
         <h3>Make a Bid</h3>
         <form action="{% url 'listing_id' listing.id %}" method="POST">
