--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -14,6 +14,10 @@
                 <div>
                     {{ listing.category }}
                 </div>
+
+                {% if not listing.photo == "" %}
+                    img src="{{ listing.photo }}" alt="{{ listing.title }}">
+                {% endif %}
                 
                 <p>{{ listing.description }}</p>
             </li>
