added images to categories and listing pages, and fixed the comments and bids, which weren't working becuase I used a variable before it was defined.

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -16,7 +16,7 @@
                 </div>
 
                 {% if not listing.photo == "" %}
-                    img src="{{ listing.photo }}" alt="{{ listing.title }}">
+                    <img src="{{ listing.photo }}" alt="{{ listing.title }}" style="max-width:500px;max-height:500px">
                 {% endif %}
                 
                 <p>{{ listing.description }}</p>
